--- a/comingsoon_01/index.html
+++ b/comingsoon_01/index.html
@@ -104,7 +104,7 @@
 					And don’t worry, we hate spam too! You can unsubcribe at anytime.
 				</p>
 			</div>
-			<p class="s2-txt3 p-t-18" style="font-size: 15px;">
+			<p class="s2-txt3 p-t-18" style="font-size: 15px; padding-bottom: 10px;">
 				Stay Connected
 			</p>
 			<div class="flex-w">
